--- a/Huawei笔记/华为命令大全.md
+++ b/Huawei笔记/华为命令大全.md
@@ -9,7 +9,8 @@
 - [vlan中绑定MAC地址](#vlan中绑定MAC地址)
 - [绑定vlan关系](#绑定vlan关系)
 - [交换机端口隔离功能](#交换机端口隔离功能)
-
+- [不同vlan之间的通信](#不同vlan之间的通信)
+- [路由协议](#路由协议)
 
 
 ## [基础命令](#基础命令)
@@ -336,3 +337,40 @@ vlan关系配置示例:
 `interface g0/0/0`  
 `arp-proxy enable`  
 这样的话，即使开启的单向隔离，那么两个端口之间也会进行访问，但是需要注意它们之间访问的逻辑是什么
+
+
+## [不同vlan之间的通信](#不同vlan之间的通信)
+### 三层交换机创建VLAN SVI实现不同vlan之间的通信  
+创建vlan 10的SVI,并给其配置ip地址  
+vlan batch 10  
+quit
+interface vlanif 10  
+ip address 192.168.64.254 255.255.255.0  
+VLAN 10的SVI的IP地址，就是VLAN 10中各主机配置的默认网关地址  
+#### 在接口中应用：  
+##### 接口为Access类型：  
+int g0/0/1  
+port link-type access  
+port default vlan 10  
+quit  
+##### 接口为Trunk类型：  
+int g0/0/1  
+port link-type trunk  
+port trunk allow-pass vlan 10  
+quit  
+
+### 在路由器接口中配置地址  
+int g0/0/1  
+ip address <ip地址> <子网掩码>  
+
+## [路由协议](#路由协议)
+### 配置默认路由(系统视图):    
+ip route-static 0.0.0.0 0.0.0.0 <下一跳地址>  
+
+### 配置静态路由(系统视图):  
+ip route-static <目的网络地址.0结尾的> <子网掩码/网络号24> <下一跳地址>  
+
+### 配置RIP路由：  
+RIP是一种基于距离矢量的算法协议，它使用跳数作为度量值来衡量到达目的地址的距离，于它直连的网络跳数为0，通过一个设备可达的网络的跳数为1  
+RIP不能在大型网络中得到应用  
+特点：仅和相邻路由器交换信息
