--- a/Huawei笔记/华为命令大全.md
+++ b/Huawei笔记/华为命令大全.md
@@ -256,7 +256,7 @@ vlan关系配置示例:
 接口设置为trunk模式  
 `port link-type trunk`  
 指定允许通过的vlan  
-`port trunk allow-vlan 10 20 30 100`  
+`port trunk allow-pass vlan 10 20 30 100`  
 退出当前视图  
 `quit`  
 进入接口视图  
@@ -337,6 +337,25 @@ vlan关系配置示例:
 `interface g0/0/0`  
 `arp-proxy enable`  
 这样的话，即使开启的单向隔离，那么两个端口之间也会进行访问，但是需要注意它们之间访问的逻辑是什么
+
+项目示例：  
+实验要求：  
+内部员工外部员工和外来人员所有pc能访问服务器  
+外部员工能和内部员工通信，但外部员工之间不能通信来访人员不能和员工通信  
+
+实验配置：  
+内部外部员工使用vlan 10  
+访客使用vlan 20  
+服务器使用vlan 100  
+使用vlanif在端口中应用使其都能通信  
+然后使用端口隔离功能  
+把内部员工pc1加入group1  
+把内部员工pc2加入group2  
+把外部员工pc3加入group3  
+把外部员工pc4加入group3  
+把访客pc5中加入group1，group2，group3  
+把访客pc6中加入group1，group2，group3  
+也就是说一个端口中可以加入多个组(相同组无法通信，不同组才能进行通信)
 
 
 ## [不同vlan之间的通信](#不同vlan之间的通信)
