--- a/Huawei笔记/华为命令大全.md
+++ b/Huawei笔记/华为命令大全.md
@@ -355,8 +355,13 @@ vlan关系配置示例:
 把外部员工pc4加入group3  
 把访客pc5中加入group1，group2，group3  
 把访客pc6中加入group1，group2，group3  
-也就是说一个端口中可以加入多个组(相同组无法通信，不同组才能进行通信)
+也就是说一个端口中可以加入多个组(相同组无法通信，不同组才能进行通信)  
 
+命令解释：  
+属于同一个VLAN不能进行二层通信但是可以进行三层通信  
+port-isolate mode l2  
+属于同一个VLAN既不能进行二层通信，也不能进行三层通信  
+port-isolate mode all  
 
 ## [不同vlan之间的通信](#不同vlan之间的通信)
 ### 三层交换机创建VLAN SVI实现不同vlan之间的通信  
