--- a/Race warm-up/信创环境的软件适配迁移样题.md
+++ b/Race warm-up/信创环境的软件适配迁移样题.md
@@ -21,10 +21,14 @@
    - D、操作系统
  
 4. 电子政务信息化发展路径正确的是（A）。
-   - A、办公设备电子化阶段、部门业务信息化阶段、公共服务网络化阶段、电子政务一体化阶段、政府服务智慧化阶段
-   - B、办公设备电子化阶段、公共服务网络化阶段、部门业务信息化阶段、电子政务一体化阶段、政府服务智慧化阶段
-   - C、办公设备电子化阶段、部门业务信息化阶段、电子政务一体化阶段、公共服务网络化阶段、政府服务智慧化阶段
-   - D、办公设备电子化阶段、部门业务信息化阶段、公共服务网络化阶段、政府服务智慧化阶段、电子政务一体化阶段
+   - A、办公设备电子化阶段、部门业务信息化阶段、公共服务网络化阶段、电子政
+   务一体化阶段、政府服务智慧化阶段
+   - B、办公设备电子化阶段、公共服务网络化阶段、部门业务信息化阶段、电子政
+   务一体化阶段、政府服务智慧化阶段
+   - C、办公设备电子化阶段、部门业务信息化阶段、电子政务一体化阶段、公共服
+   务网络化阶段、政府服务智慧化阶段
+   - D、办公设备电子化阶段、部门业务信息化阶段、公共服务网络化阶段、政府服
+   务智慧化阶段、电子政务一体化阶段
  
 5. 属于JavaEE技术规范中的EJB规范是哪个（A）？
    - A、EJB 3.1
@@ -98,13 +102,13 @@
     - C、4
     - D、1
  
-17. 下列哪个命令能查找当前目录一个月（30天）以前大于100M的日志文件（.log）？（B）
+17. 下列哪个命令能查找当前目录一个月（30天）以前大于100M的日志文件（.log）？（C）
     - A、find . -name "*.log" -m time +30 -type f -size +10
     - B、find . -name "*.log" -mtime +30 -type f -size +100
     - C、find . -name "*.log" -mtime +30 -type -size +100M
     - D、find . -name "*.log" -m time +30 -type -size +100M
  
-18. 创建raid5最少需要几块硬盘？（C）
+18. 创建raid5最少需要几块硬盘？（B）
     - A、2
     - B、3
     - C、4
@@ -154,8 +158,8 @@
  
 26. 下列linux常用命令中，不可以查看文件内容的是哪一个?（A）
     - A、wc
-    - B、 more
-    - C、 less
+    - B、more
+    - C、less
     - D、tail
  
 27. 以下哪个命令可以用来更改文件的读写权限？（A）
@@ -170,7 +174,7 @@
     - C、寄存器
     - D、缓存
  
-29. 采用指令 Cache 与数据 Cache 分离的主要目的是（B）。
+29. 采用指令 Cache 与数据 Cache 分离的主要目的是（D）。
     - A、降低 Cache 的缺失损失
     - B、提高 Cache 的命中率
     - C、降低 CPU 平均访问时间
@@ -229,7 +233,7 @@
    - C、执行、写、读
    - D、读、执行、写
  
-39. 在vim的编辑模式下，哪一个命令可以在光标所在行的下一行进行编辑？（C）
+39. 在vim的编辑模式下，哪一个命令可以在光标所在行的`下一行`进行编辑？（C）
    - A、i
    - B、a
    - C、o
@@ -259,7 +263,7 @@
    - C、扩大市场份额
    - D、降低生产成本
  
-44. 信创产业中的“两芯”指的是什么？（D）
+44. 信创产业中的“两芯”指的是什么？（A）
    - A、CPU和GPU
    - B、CPU和FPGA
    - C、CPU和DSP
@@ -271,13 +275,13 @@
    - C、市场需求不足
    - D、国际竞争压力
  
-46. 世界上第一个数据库是什么模型?（B）
+46. 世界上第一个数据库是什么模型?（C）
    - A、关系型
    - B、层次型
    - C、网状型
    - D、事务型
  
-47. ACID的提出者是谁?（D）
+47. ACID的提出者是谁?（A）
    - A、尼古拉.格雷
    - B、比尔.门恩
    - C、拉里.埃里森
@@ -304,10 +308,10 @@
        discounted_price numeric CHECK (discounted_price > 0),
        CHECK (price > discounted_price)
    );
-   - A、主键唯一约束检查约束非空约束
-   - B、主键外键检查约束非空约束
-   - C、主键外键排他约束非空约束
-   - D、外键检查约束唯一约束非空约束
+   - A、主键 唯一约束 检查约束 非空约束
+   - B、主键 外键 检查约束 非空约束
+   - C、主键 外键 排他约束 非空约束
+   - D、外键 检查约束 唯一约束 非空约束
  
 51. 在虚拟化技术中，从x86架构迁移到ARM架构后，以下哪种软件修改通常是必须的？（B）
    - A、图形界面优化
@@ -377,7 +381,7 @@
    - C、内存
    - D、JDK
  
-2. 分布式架构有哪些特点（BC）？
+2. 分布式架构有哪些特点（BCD）？
    - A、架构简单
    - B、架构复杂
    - C、利于扩展
@@ -395,7 +399,7 @@
    - C、最小连接数算法
    - D、一致性哈希算法
  
-5. 信创应用服务器可以快速适配哪些语言开发的应用（ABCD）？
+5. 信创应用服务器可以快速适配哪些语言开发的应用（ABC）？
    - A、JAVA
    - B、PHP
    - C、Python
@@ -407,7 +411,7 @@
    - C、通信服务
    - D、事务服务
  
-7. 以下哪些ip是和172.16.200.10/16在同一子网内的主机（BC）？
+7. 以下哪些ip是和172.16.200.10/16在同一子网内的`主机`（BC）？
    - A、192.168.0.1
    - B、172.16.0.1
    - C、172.16.200.11
@@ -419,7 +423,7 @@
    - C、不能对目录创建硬链接
    - D、可以跨文件系统
  
-9. 假设今天是2021年6月1号，想要在6月3号执行某条命令，时间设置正确的选项是（B）？
+9. 假设今天是2021年6月1号，想要在6月3号执行某条命令，时间设置正确的选项是（BC）？
    - A、at 3/6/2021
    - B、at now + 2 days
    - C、at 6/3/2021
@@ -455,14 +459,14 @@
     - C、进程/线程绑核优化
     - D、使用多线程编程
  
-15. 关于GPL开源协议，下面说法正确的是（ABCD）？
+15. 关于GPL开源协议，下面说法正确的是（ABD）？
     - A、遵循GPL协议的软件必须开源
     - B、在GPL开源软件基础上修改的代码也必须开源
     - C、GPL开源软件必须免费提供
     - D、在GPL开源软件基础上修改代码发布的软件可以收费但必须开源
     - E、通过GPL协议发布的软件必须放弃版权（此选项未在答案中，故不选）
  
-16. 启动数据库报错如下，要解决这个问题，下面哪些方法是有效的（ABD）？
+16. 启动数据库报错如下，要解决这个问题，下面哪些方法是有效的（ABC）？
     - A、增大数据库参数max_process_memory
     - B、减少数据库参数shared_buffers
     - C、减少数据库参数max_connection
@@ -521,7 +525,7 @@
    - 解释：LVM（逻辑卷管理）允许用户在不停机的情况下动态地调整磁盘资源的分配。
 
 7. **由于技术的局限性，我们不能跨分区对目录文件进行软链接。**  
-   - 答案：A、正确（但更准确的表述是软链接不能跨文件系统）  
+   - 答案：A、错误（但更准确的表述是软链接不能跨文件系统）  
    - 解释：软链接（符号链接）实际上是指向文件路径的链接，因此它不能跨不同的文件系统创建，但跨分区（如果分区属于同一文件系统）是可能的。不过，通常我们更强调软链接不能跨文件系统。
 
 8. **为了提高业务系统的整体性能，可以使用多线程编程技术，让多线程充分利用 CPU，提高 CPU 利用率，所以线程数量越多，性能越好。**  
