--- a/杂记/国内镜像源参考.md
+++ b/杂记/国内镜像源参考.md
@@ -31,28 +31,43 @@
 </ul>
 <h2>Python 包管理器 pip 镜像</h2>
 <ul>
-    <li>清华大学镜像：<a href="https://pypi.tuna.tsinghua.edu.cn/simple/">https://pypi.tuna.tsinghua.edu.cn/simple/</a></li>
-    <li>豆瓣镜像：<a href="https://pypi.douban.com/simple/">https://pypi.douban.com/simple/</a></li>
-    <li>华为云镜像：<a href="https://repo.huaweicloud.com/repository/pypi/simple/">https://repo.huaweicloud.com/repository/pypi/simple/</a></li>
-    <li>北京外国语大学镜像：<a href="https://mirrors.bfsu.edu.cn/pypi/web/simple/">https://mirrors.bfsu.edu.cn/pypi/web/simple/</a></li>
+    <li><a href="https://pypi.tuna.tsinghua.edu.cn/simple/">清华大学镜像</a></li>
+    <li><a href="https://pypi.douban.com/simple/">豆瓣镜像</a></li>
+    <li><a href="https://repo.huaweicloud.com/repository/pypi/simple/">华为云镜像</a></li>
+    <li><a href="https://mirrors.bfsu.edu.cn/pypi/web/simple/">北京外国语大学镜像</a></li>
+    <li><a href="https://mirrors.aliyun.com/pypi/simple/">阿里云镜像</a></li>
+    <li><a href="https://mirrors.ustc.edu.cn/pypi/web/simple/">中国科学技术大学镜像</a></li>
 </ul>
 <h2>Docker 镜像</h2>
 <ul>
-    <li>阿里云镜像：<a href="https://mirrors.aliyun.com/docker-hub/">https://mirrors.aliyun.com/docker-hub/</a></li>
-    <li>华为云镜像：<a href="https://mirrors.huaweicloud.com/docker-hub/">https://mirrors.huaweicloud.com/docker-hub/</a></li>
-    <li>腾讯镜像：<a href="https://mirrors.cloud.tencent.com/docker-hub/">https://mirrors.cloud.tencent.com/docker-hub/</a></li>
+    <li><strong>Docker国内镜像源</strong>
+        <ul>
+            <li><a href="https://registry.docker-cn.com">Docker国内镜像源</a></li>
+            <li><a href="https://docker.mirrors.ustc.edu.cn">中科大源</a></li>
+            <li><a href="https://hub-mirror.c.163.com">网易源</a></li>
+            <li><a href="https://mirror.baidubce.com">百度源</a></li>
+            <li><a href="https://ccr.ccs.tencentyun.com">腾讯源</a></li>
+            <li><a href="https://mirrors.pku.edu.cn">北京大学源</a></li>
+            <li><a href="https://mirrors.aliyun.com/docker-hub/">阿里云Docker Hub镜像</a></li>
+            <li><a href="https://mirrors.cloud.tencent.com/docker-hub/">腾讯Docker Hub镜像</a></li>
+            <li><a href="https://mirrors.huaweicloud.com/docker-hub/">华为云Docker Hub镜像</a></li>
+        </ul>
+    </li>
 </ul>
 <h2>Java 系列</h2>
 <ul>
     <li><strong>JDK / OpenJDK 镜像</strong>
         <ul>
-            <li>华为云镜像：<a href="https://mirrors.huaweicloud.com/OpenJDK/">https://mirrors.huaweicloud.com/OpenJDK/</a></li>
-            <li>清华大学镜像 AdoptOpenJDK：<a href="https://mirrors.tuna.tsinghua.edu.cn/AdoptOpenJDK/">https://mirrors.tuna.tsinghua.edu.cn/AdoptOpenJDK/</a></li>
+            <li><a href="https://mirrors.huaweicloud.com/OpenJDK/">华为云镜像</a></li>
+            <li><a href="https://mirrors.tuna.tsinghua.edu.cn/AdoptOpenJDK/">清华大学镜像 AdoptOpenJDK</a></li>
+            <li><a href="https://mirrors.aliyun.com/openjdk/">阿里云OpenJDK镜像</a></li>
         </ul>
     </li>
     <li><strong>Maven 镜像</strong>
         <ul>
-            <li>阿里云镜像：<a href="https://maven.aliyun.com/repository/public">https://maven.aliyun.com/repository/public</a></li>
+            <li><a href="https://maven.aliyun.com/repository/public">阿里云镜像</a></li>
+            <li><a href="https://mirrors.tuna.tsinghua.edu.cn/maven/">清华大学镜像</a></li>
+            <li><a href="https://mirrors.huaweicloud.com/repository/maven/">华为云Maven镜像</a></li>
         </ul>
     </li>
 </ul>
