--- a/杂记/浏览器插件备份.md
+++ b/杂记/浏览器插件备份.md
@@ -4,9 +4,13 @@
 
 **不管是微软Edge还是谷歌Chrome浏览器，均要打开【开发者模式】/【开发人员模式】**  
 微软Edge为：右上角的【…】→【扩展】→ 打开扩展界面左下角的【开发人员模式】和【允许来自其他应用商店的扩展】  
+![cjsave1](https://github.com/user-attachments/assets/89bf0d09-f166-483e-8fb9-2b902ab14be4)  
+![cjsave2](https://github.com/user-attachments/assets/1fd58cd7-91db-4341-a86b-9f435ca9448d)  
 
 
 谷歌Chrome为：右上角的【…】→【更多工具】→【扩展程序】→ 打开扩展界面右上角的【开发者模式】  
+![cjsave3](https://github.com/user-attachments/assets/12eb40f1-19de-4eca-a601-9ad61cad5557)  
+![cjsave4](https://github.com/user-attachments/assets/7fe29a81-b197-4e77-9e02-8e5158d32273)  
 
 ## 打包备份扩展程序或插件
 ### 将所有扩展程序/插件整体一次性打包备份：
@@ -18,6 +22,7 @@ C:\Users\你的电脑用户名\AppData\Local\Microsoft\Edge\User Data\Default\Ex
 ```
 C:\Users\Admin\AppData\Local\Microsoft\Edge\User Data\Default\Extensions
 ```
+![cjsave5](https://github.com/user-attachments/assets/80c47eef-9c72-420b-b56e-ef0c1793f3cf)  
 
 #### 谷歌Chrome扩展程序默认路径为：
 <pre>
@@ -27,17 +32,24 @@ C:\Users\你的电脑用户名\AppData\Local\Google\Chrome\User Data\Default\Ext
 ```
 C:\Users\Admin\AppData\Local\Google\Chrome\User Data\Default\Extensions
 ```
+![cjsave6](https://github.com/user-attachments/assets/209c3320-c704-4c0f-b918-a1702bb7aaa6)  
 找到该路径，将整个`Extensions`文件夹打包备份（插件及插件数据都安装在Extensions目录内）
 
 ### 单个扩展程序/插件打包备份：
 以微软Edge为例：  
 1.先在扩展界面找到待备份的插件，将其ID复制。ID与插件一一对应，每个插件的ID都是唯一的  
+![cjsave7](https://github.com/user-attachments/assets/eb37af3b-afd4-49ff-b6c3-229701bd33e9)  
 
 2.将复制的ID粘贴到文件管理器里搜，快捷键F3（热键不能有冲突），最快的方法就是粘贴到everything里搜索，秒出。系统搜索速度实在慢得令人发指  
+![cjsave8](https://github.com/user-attachments/assets/54291332-9008-45ef-b57a-57d96c315de1)  
 
 3.随后打开该插件ID所在的路径，进一步打开该插件的版本号文件夹，然后复制地址栏上的完整路径  
+![cjsave9](https://github.com/user-attachments/assets/ce31a08e-7804-4dbc-a021-d283c62b2fb0)  
+![cjsave10](https://github.com/user-attachments/assets/6fecc618-3c4b-4e6d-b546-19f1753d96ac)  
 
 4.回到Edge的插件界面，【打包扩展】→【扩展根目录（将刚才复制的路径粘贴进去）】→【打包扩展】→得到了该插件crx安装包，备份完成  
+![cjsave11](https://github.com/user-attachments/assets/a1fdcafb-451a-4c05-88d2-eed47a6727fd)  
+![cjsave12](https://github.com/user-attachments/assets/7d3b86b5-9a16-4061-b20f-e0a2d53e385b)  
 
 ## 安装上一步备份出来的crx文件
 微软Edge和谷歌Chrome的安装原理一样  
@@ -45,4 +57,6 @@ C:\Users\Admin\AppData\Local\Google\Chrome\User Data\Default\Extensions
 如果直接拖入无法安装，则将该压缩文件再解压一次得到一个文件夹，随后在扩展界面选择【加载解压缩的扩展】，选择解压后的文件夹，即可安装  
 
 2、安装此前备份出来的Extensions文件夹，先在扩展界面点击【加载已解压的扩展程序】，在【Extensions】文件夹层级一层一层往下选，直到某个插件的版本号文件夹，再点击【选择文件夹】，即可安装上。如图：  
+![cjsave13](https://github.com/user-attachments/assets/a42657d4-f91f-45da-8152-e10430635e08)  
+![cjsave14](https://github.com/user-attachments/assets/fd46b57b-f48d-4467-a819-b78c70fe00f7)  
 
