--- a/杂记/浏览器插件备份.md
+++ b/杂记/浏览器插件备份.md
@@ -53,8 +53,22 @@ C:\Users\Admin\AppData\Local\Google\Chrome\User Data\Default\Extensions
 
 ## 安装上一步备份出来的crx文件
 微软Edge和谷歌Chrome的安装原理一样  
-1、单个插件安装：`把.crx改成.zip后缀名`，得到一个压缩包，`把该压缩包拖入Edge或Chrome的扩展界面`即可安装  
-如果直接拖入无法安装，则将该压缩文件再解压一次得到一个文件夹，随后在扩展界面选择【加载解压缩的扩展】，选择解压后的文件夹，即可安装  
+1、单个插件安装：  
+方法一：把.crx文件直接拖入扩展程序界面安装  
+浏览器右上角设置—更多工具—扩展程序  
+打开此页面右上角的开发者模式的开关  
+把.crx文件直接拖入扩展程序界面，松手等待弹窗提示，点击添加扩展程序即可  
+![tuorucj](https://github.com/user-attachments/assets/8d188320-04b5-4b83-971f-1164a99e686e)  
+
+Tips:`经我测试，并不是所有的crx文件都可以用拖动的方式直接添加，一般情况下，如果该插件是Chrome webstore里现有的没下架的，或一直保持更新的（也就是比较有活力的插件），这么操作的成功率高。如果拖入之后提示“程序包无效”，请见下面的方法二`  
+方法二：把.crx文件的`后缀`改成压缩文件的后缀名，直接拖入扩展程序界面，松手等待弹窗提示，点击添加扩展程序即可（和方法一的步骤一样）  
+![cjaz1](https://github.com/user-attachments/assets/b69bbd9d-490e-40dc-9a1e-985d2d5e7c70)  
+
+Tipes:`如果改成压缩文件还安装不上的，就把文件先改成压缩包，再解压，然后在扩展程序界面选择“加载已解压的扩展程序”，选中刚刚解压的文件夹即可。安装完的扩展插件会出现在地址栏的右边`  
+把文件先改成压缩包，再解压  
+![cjaz2](https://github.com/user-attachments/assets/24af22b0-dbaa-463b-938b-4bb860ce3b6d)  
+在扩展程序界面选择`加载已解压的扩展程序`，选中刚刚解压的文件夹即可  
+![cjaz3](https://github.com/user-attachments/assets/4c0b1e65-c95b-4360-b84c-fe0185f828c0)  
 
 2、安装此前备份出来的Extensions文件夹，先在扩展界面点击【加载已解压的扩展程序】，在【Extensions】文件夹层级一层一层往下选，直到某个插件的版本号文件夹，再点击【选择文件夹】，即可安装上。如图：  
 ![cjsave13](https://github.com/user-attachments/assets/a42657d4-f91f-45da-8152-e10430635e08)  
