--- a/Big Data Notes/第4章-平台的基础环境配置.md
+++ b/Big Data Notes/第4章-平台的基础环境配置.md
@@ -1,6 +1,6 @@
-### 实验一：基础环境配置
+## 实验一：基础环境配置
 
-#### Master节点
+### Master节点
 查看IP地址
 ```bash
 ip a
@@ -83,7 +83,7 @@ ssh slave2
 exit
 ```
 
-#### Slave1节点
+### Slave1节点
 查看IP地址
 ```bash
 ip a
@@ -146,7 +146,7 @@ cat ~/.ssh/id_rsa.pub > ~/.ssh/authorized_keys
 chmod 700 ~/.ssh/authorized_keys
 ```
 
-#### Slave2节点
+### Slave2节点
 查看IP地址
 ```bash
 ip a
@@ -209,9 +209,9 @@ cat ~/.ssh/id_rsa.pub > ~/.ssh/authorized_keys
 chmod 700 ~/.ssh/authorized_keys
 ```
 
-### 实验二：Hadoop集群部署
+## 实验二：Hadoop集群部署
 
-#### Master节点
+### Master节点
 解压安装Hadoop
 ```bash
 su root
@@ -434,12 +434,12 @@ scp -r /etc/profile root@slave1:/etc/
 ```bash
 scp -r /etc/profile root@slave2:/etc/
 ```
-### 在每个节点上修改/usr/local/src/hadoop 目录的权限
-#### Master节点
+在每个节点上修改/usr/local/src/hadoop 目录的权限
+### Master节点
 ```bash
 chown -R hadoop:hadoop /usr/local/src/hadoop
 ```
-#### Slave1节点
+### Slave1节点
 ```bash
 chown -R hadoop:hadoop /usr/local/src/hadoop
 ```
@@ -453,7 +453,7 @@ update-alternatives --install /usr/bin/java java /usr/local/src/java/bin/java 20
 ```bash
 update-alternatives --set java /usr/local/src/java/bin/java
 ```
-#### Slave2节点
+### Slave2节点
 ```bash
 chown -R hadoop:hadoop /usr/local/src/hadoop
 ```
@@ -468,9 +468,9 @@ update-alternatives --install /usr/bin/java java /usr/local/src/java/bin/java 20
 update-alternatives --set java /usr/local/src/java/bin/java
 ```
 
-### 实验三：Hadoop集群启动测试
+## 实验三：Hadoop集群启动测试
 
-#### Master节点
+### Master节点
 格式化元数据
 ```bash
 su hadoop
@@ -482,7 +482,7 @@ source /etc/profile
 hdfs namenode -format
 ```
 
-#### Slave1节点
+### Slave1节点
 ```bash
 su hadoop
 ```
@@ -490,7 +490,7 @@ su hadoop
 source /etc/profile
 ```
 
-#### Slave2节点
+### Slave2节点
 ```bash
 su hadoop
 ```
@@ -498,7 +498,7 @@ su hadoop
 source /etc/profile
 ```
 
-#### Master节点
+### Master节点
 启动hdfs和yarn
 ```bash
 start-dfs.sh
@@ -517,8 +517,8 @@ master:8088端口
 master:9000端口
 </pre>
 
-# Mapreduce测试
-#### Master节点
+## Mapreduce测试
+### Master节点
 创建一个测试文件
 ```bash
 vim a.txt
@@ -557,4 +557,3 @@ hadoop fs -lsr /output
 ```bash
 hadoop fs -cat /output/part-r-00000
 ```
-
