--- a/Docker Notes/Docker项目部署/独脚数发卡网.md
+++ b/Docker Notes/Docker项目部署/独脚数发卡网.md
@@ -146,7 +146,8 @@ docker-compose down
 - 将MySQL的用户名改为dujiaoka
 - 将Redis的地址改为redis
 - 填写网站名称修改为你的
-- 填写网站url地址,例如 https://shop.edwardhu.com
+- 填写网站url地址,例如 https://shop.edwardhu.com  
+![shop](https://github.com/user-attachments/assets/070c5b23-462d-4cca-8990-1d7e713b7a02)  
 
 ## 安装成功后的配置
 首次进入安装并完成后，需要将`docker-compose.yaml`环境变量中的`INSTALL=true`改为`INSTALL=false`，然后运行以下命令使其生效：  
