--- a/Docker Notes/Docker项目部署/独脚数发卡网.md
+++ b/Docker Notes/Docker项目部署/独脚数发卡网.md
@@ -72,7 +72,7 @@ APP_NAME=礼盒杰的黑店
 APP_ENV=local
 APP_KEY=base64:rKwRuI6eRpCw/9e2XZKKGj/Yx3iZy5e7+FQ6+aQl8Zg=
 APP_DEBUG=false
-APP_URL=https://你的域名
+APP_URL=http://localhost:56789
 
 LOG_CHANNEL=stack
 
@@ -115,7 +115,7 @@ ADMIN_ROUTE_PREFIX=/admin
 
 # 是否开启https (前端开启了后端也必须为true)
 # 后台登录出现0err或者其他登录异常问题，大概率是开启了https而后台没有开启，把下面的false改为true即可
-ADMIN_HTTPS=true
+ADMIN_HTTPS=false
 ```
 可以直接使用我这个配置，但注意修改下面 3 个参数的值:  
 - APP_NAME=礼盒杰的黑店
@@ -146,7 +146,7 @@ docker-compose down
 - 将MySQL的用户名改为dujiaoka
 - 将Redis的地址改为redis
 - 填写网站名称修改为你的
-- 填写网站url地址,例如 https://shop.edwardhu.com  
+- 填写网站url地址,例如 http://localhost:56789
 ![shop](https://github.com/user-attachments/assets/070c5b23-462d-4cca-8990-1d7e713b7a02)  
 
 ## 安装成功后的配置
