--- a/Docker Notes/Docker项目部署/独脚数发卡网.md
+++ b/Docker Notes/Docker项目部署/独脚数发卡网.md
@@ -146,7 +146,7 @@ docker-compose down
 - 将MySQL的用户名改为dujiaoka
 - 将Redis的地址改为redis
 - 填写网站名称修改为你的
-- 填写网站url地址,例如 http://localhost:56789
+- 填写网站url地址,例如 http://localhost:56789  
 ![shop](https://github.com/user-attachments/assets/070c5b23-462d-4cca-8990-1d7e713b7a02)  
 
 ## 安装成功后的配置
@@ -160,4 +160,4 @@ docker-compose down
 docker-compose up -d
 ```
 后期可以将env.conf文件中的`APP_DEBUG=true`改为`APP_DEBUG=false`，这样就不会再出现报错信息了  
-后台登录账号和密码均为 `admin`，及时登录修改
+**后台登录账号和密码均为 `admin`，及时登录修改**
