--- a/Docker Notes/Docker项目部署/独脚数发卡网.md
+++ b/Docker Notes/Docker项目部署/独脚数发卡网.md
@@ -151,13 +151,10 @@ docker-compose down
 
 ## 安装成功后的配置
 首次进入安装并完成后，需要将`docker-compose.yaml`环境变量中的`INSTALL=true`改为`INSTALL=false`，然后运行以下命令使其生效：  
-停止容器
+重启容器：
 ```bash
-docker-compose down
+docker-compose down && docker-compose up -d
 ```
-启动容器
-```bash
-docker-compose up -d
-```
+
 后期可以将env.conf文件中的`APP_DEBUG=true`改为`APP_DEBUG=false`，这样就不会再出现报错信息了  
 **后台登录账号和密码均为 `admin`，及时登录修改**
