--- a/杂记/RAX3000M路由器刷机教程.md
+++ b/杂记/RAX3000M路由器刷机教程.md
@@ -3,7 +3,9 @@
 **注意：这是EMMC版本**  
 判断的唯一标准是开启ssh后，输入df -h命令查看你存储空间的大小，如果有一个50多G的分区，则说明是EMMC，否则是NAND  
 
-**使用电脑网线连接路由器的lan口**
+**使用电脑网线连接路由器的lan口**  
+
+![lct](https://github.com/user-attachments/assets/de802ebf-9d37-4cf4-aabd-bca203216dac)  
 
 ## 开启SSH
 原理是通过修改配置的方式来开启ssh，由于后面生产的固件，配置文件可能会被加密，因此我们需要解密后才能修改配置文件，然后按照同样的加密方式生成新的配置文件  
@@ -33,7 +35,9 @@ tar -xvzf cfg_export_config_file.conf
 
 ### 修改配置
 1.修改`/etc/shadow`，去掉root用户的密码，这样ssh进入系统时，不用root密码了。具体做法是： `将两个冒号间的`密码删除然后保存  
-2.修改`/etc/config/dropbear`开启ssh服务
+![ssh1](https://github.com/user-attachments/assets/120242ed-f42e-4ded-984c-66af87c82d80)  
+2.修改`/etc/config/dropbear`开启ssh服务  
+![ssh2](https://github.com/user-attachments/assets/93dca3df-5052-4a98-be0e-7c24efeaa2eb)  
 
 ### 加密
 *注意：如果你的配置文件是通过openssl解密得到的（例如1214版本），则需要重新加密后才能导入*  
@@ -108,7 +112,7 @@ dd if=/dev/zero of=/dev/mmcblk0 bs=512 seek=13312 count=8192 conv=fsync
 dd if=mt7981-cmcc_rax3000m-emmc-fip.bin of=/dev/mmcblk0 bs=512 seek=13312 conv=fsync
 ```
 *请注意，输入以上命令后，请仔细对比结果是否和下面图片一致，如果不一致，先不要重启，不要重启！保留错误信息，立即寻求帮助！QQ群：514064260*  
-
+![uboot](https://github.com/user-attachments/assets/fee1eabd-3543-40b4-b81f-c8df88ed3979)  
 
 ### 刷openwrt
 路由器断电后先使用牙签按住路由器的RESET按键不松开然后给路由器通电等待大概8秒左右看见红灯亮就可以了  
