--- a/杂记/RAX3000M路由器刷机教程.md
+++ b/杂记/RAX3000M路由器刷机教程.md
@@ -1,5 +1,9 @@
 # RAX3000M路由器刷机教程
 
+参考教程：  
+https://zhuanlan.zhihu.com/p/696434968  
+https://blog.codee.top/rax3000m%E6%90%9E%E6%9C%BA%E7%9B%AE%E5%BD%95/
+
 **注意：这是EMMC版本**  
 判断的唯一标准是开启ssh后，输入df -h命令查看你存储空间的大小，如果有一个50多G的分区，则说明是EMMC，否则是NAND  
 
