--- a/杂记/RAX3000M路由器刷机教程.md
+++ b/杂记/RAX3000M路由器刷机教程.md
@@ -1,5 +1,8 @@
 # RAX3000M路由器刷机教程
 
+参考视频：  
+https://www.bilibili.com/video/BV1wT421X74C?t=252.5
+
 参考教程：  
 https://zhuanlan.zhihu.com/p/696434968  
 https://blog.codee.top/rax3000m%E6%90%9E%E6%9C%BA%E7%9B%AE%E5%BD%95/
