--- a/杂记/RAX3000M路由器刷机教程.md
+++ b/杂记/RAX3000M路由器刷机教程.md
@@ -87,7 +87,8 @@ dd if=/dev/mmcblk0p11 of=/mnt/mmcblk0p12/mmcblk0p11.bin
 ```
 然后你可以通过winscp连接上路由器，进入`/mnt/mmcblk0p12`下载这些备份文件到电脑以防变砖的时候恢复
 
-## 刷入uboot
+## 刷入uboot  
+当然可以选择你需要的uboot: https://drive.wrt.moe/uboot/mediatek  
 **immortalwrt的uboot(推荐)**  
 ### 下载uboot
 下载后，把uboot上传到路由器的`/tmp/uboot`目录下，ssh进去后，执行cd /tmp/uboot该目录，对三个文件分别输入输入md5sum xxx.bin确保文件的md5一致，以免刷入损坏的文件，如果md5不一致，请停止操作，重新下载  
