--- a/杂记/RAX3000M路由器刷机教程.md
+++ b/杂记/RAX3000M路由器刷机教程.md
@@ -130,7 +130,9 @@ dd if=mt7981-cmcc_rax3000m-emmc-fip.bin of=/dev/mmcblk0 bs=512 seek=13312 conv=f
 当然你也可以在`系统`-`管理权`中配置面板密码和ssh密码等  
 
 ## 网络配置
-`网络`-`无线`
+同网段无线中继视频教程：  
+https://www.bilibili.com/video/BV1yu4y1Y7cX?t=23.7  
+`网络`-`无线`  
 我使用的是中继模式上网即当前路由器充当旁路由使用  
 radio0是2.4G radio1是5G频段的  
 我在这里点击扫描并连接到自己家里的WIFI输入密码添加网络  
