--- a/Cisco Notes/子网划分.md
+++ b/Cisco Notes/子网划分.md
@@ -58,13 +58,14 @@ C类私有地址：**192.168.0.0 到 192.168.255.255**
 ### 子网划分的基本概念
 子网划分是**将一个较大的网络划分成若干个较小的网络**，以提高网络的效率和安全性。子网划分通常通过**借用**IP地址的一部分**主机位**来作为子网位实现。  
 
-#### 重点内容
+> [!Note]
 **子网地址**和**网络地址**是同一个概念。它们都**表示一个网段的起始地址**，用于标识一个特定的网络范围**即网段**  
 **判断是否处于同一网段是通过计算子网地（网络地址）是否相同来判断的**  
 **子网划分后子网掩码相同但是网段不一定相同**  
 
-**2^m=向主机借位后产生的子网个数，m为所借的位数**  
-**2^n-2=可用的主机IP数**  
+#### 计算方法
+**2^m = 向主机借位后产生的子网个数，m为所借的位数**  
+**2^n-2 = 可用的主机IP数**  
 **n为源主机位剔除被借位后的剩余位数**  
 **-2的原因是因为每个子网中的网络号及广播号不可用**
 
@@ -128,13 +129,13 @@ IP地址转换为2进制：
 子网掩码转换为2进制：  
 11111111 | 11111111 | 11111111 | 10000000  
 逻辑AND（上下对比相同用相同不同使用0）：  
-11111111 | 11111111 | 11111111 | 00000000
+11111111 | 11111111 | 11111111 | 00000000  
 
 广播地址：192.168.1.127  
 子网地址转换为2进制：  
-11111111 | 11111111 | 11111111 | 00000000
+11111111 | 11111111 | 11111111 | 00000000  
 主机部分全部置为1：  
-11111111 | 11111111 | 11111111 | 01111111
+11111111 | 11111111 | 11111111 | 01111111  
 64 + 32 + 16 + 8 + 4 + 2 + 1 = 127
 
 例如：192.168.1.234/25  
@@ -145,13 +146,13 @@ IP地址转换为2进制：
 子网掩码转换为2进制：  
 11111111 | 11111111 | 11111111 | 10000000  
 逻辑AND（上下对比相同用相同不同使用0）：  
-11111111 | 11111111 | 11111111 | 10000000
+11111111 | 11111111 | 11111111 | 10000000  
 
-广播地址：192.168.1.255
+广播地址：192.168.1.255  
 子网地址转换为2进制：  
-11111111 | 11111111 | 11111111 | 10000000
+11111111 | 11111111 | 11111111 | 10000000  
 主机部分全部置为1：  
-11111111 | 11111111 | 11111111 | 11111111
+11111111 | 11111111 | 11111111 | 11111111  
 128 + 64 + 32 + 16 + 8 + 4 + 2 + 1 = 255
 
 **4. 确定每个子网的可用主机地址范围：**  
