--- a/Cisco Notes/端口映射与端口转发.md
+++ b/Cisco Notes/端口映射与端口转发.md
@@ -3,7 +3,7 @@
 ### 什么是端口映射
 端口映射就是将公网IP地址和端口映射到内网中的特定设备和端口，**实现外部网络对内部网络资源的访问**。当用户访问外网IP的这个端口时，服务器自动将请求映射到对应局域网内部的机器上。  
 如图实现将本地内网服务的端口映射到公网路由器的外部端口中从而实现外网对内网服务的访问：  
-
+![dkys](https://github.com/user-attachments/assets/4aa91229-bb16-4c65-8a2e-0070d2ce0608)  
 
 **打个比方**：  
 我们在内网中有一台Web服务器，但是外网中的用户是没有办法直接访问该服务器的。于是我们可以在路由器上设置一个端口映射，只要外网用户访问路由器ip的80端口，那么路由器会把自动把流量转到内网Web服务器的80端口上。并且，在路由器上还存在一个Session，当内网服务器返回数据给路由器时，路由器能准确的将消息发送给外网请求用户的主机。在这过程中，路由器充当了一个反向代理的作用，他保护了内网中主机的安全。  
@@ -12,7 +12,7 @@
 ### 什么是端口转发
 端口转发（Port forwarding），用于将进入某个IP地址和端口的数据包转发到另一个IP地址和端口。它通常用于**将外部网络的请求转发到内部网络中的特定设备和服务**。  
 如图实现从本地计算机访问云服务器中的私网服务：  
-
+![dkzf](https://github.com/user-attachments/assets/c41779a9-1100-4a6e-96f4-864daaca827f)  
 
 **打个比方**：  
 我们现在在内网中，是没有办法直接访问外网的。但是我们可以通过路由器的**NAT方式**访问外网。假如我们内网现在有100台主机，那么我们现在都是通过路由器的这一个公网IP和外网通信的。那么，当互联网上的消息发送回来时，路由器是怎么知道这个消息是给他的，而另外消息是给你的呢？这就要我们的**ip地址和路由器的端口进行绑定**了，这时，在路由器中就会有一个**内网ip和路由器端口对应的一张表**。当路由器的10000端口收到消息时，就知道把消息发送给他，而当20000端口收到消息时，就知道把消息发送给你。这就是端口转发，其转发一个端口收到的流量，给另一个主机。  
