--- a/杂记/RAX3000M路由器刷机教程.md
+++ b/杂记/RAX3000M路由器刷机教程.md
@@ -19,7 +19,7 @@ https://blog.codee.top/rax3000m%E6%90%9E%E6%9C%BA%E7%9B%AE%E5%BD%95/
 *注意：不要随便导入别人的配置文件，有的人版本和你不一样，导入了可能出错！最好就是自己导出配置文件，自己修改，自己打包再导入*  
 
 ### 导出配置
-进入rax3000m路由器的后台192.168.10.1点击高级：  
+进入rax3000m路由器的后台**192.168.10.1**点击高级：  
 配置管理 -> 导出配置文件
 
 ### 解密
@@ -138,3 +138,31 @@ radio0是2.4G radio1是5G频段的
 我在这里点击扫描并连接到自己家里的WIFI输入密码添加网络  
 如果你只想使用有线并不需要用到openwrt的无线(这里为了减少功耗)你可以选择`禁用 OpenWrt_2.4G和 OpenWrt_5G`  
 至此完成配置！！！
+
+
+### 修改软件包镜像地址
+进入面板后台，系统-软件包-配置opkg  
+```
+src/gz openwrt_core https://mirrors.ustc.edu.cn/openwrt/releases/23.05.3/targets/mediatek/filogic/packages
+src/gz openwrt_base https://mirrors.ustc.edu.cn/openwrt/releases/23.05.3/packages/aarch64_cortex-a53/base
+src/gz openwrt_luci https://mirrors.ustc.edu.cn/openwrt/releases/23.05.3/packages/aarch64_cortex-a53/luci
+src/gz openwrt_packages https://mirrors.ustc.edu.cn/openwrt/releases/23.05.3/packages/aarch64_cortex-a53/packages
+src/gz openwrt_routing https://mirrors.ustc.edu.cn/openwrt/releases/23.05.3/packages/aarch64_cortex-a53/routing
+src/gz openwrt_telephony https://mirrors.ustc.edu.cn/openwrt/releases/23.05.3/packages/aarch64_cortex-a53/telephony
+```
+
+### EMMC分区
+进入系统后发现emmc没有挂载上，默认是没有分区的，有一部分闲置空间，需要通过cfdisk命令创建新分区：
+```bash
+opkg update
+opkg install cfdisk
+```
+创建新分区:
+```
+cfdisk /dev/mmcblk0
+```
+找到最下面的**Fress Space**，选择**New**  
+默认分配了最大的剩余空间，**回车**即可  
+移动到**write**然后**回车**，输入**yes**回车，按**q**退出即可  
+系统会自动挂载，进入挂载点查看有一个新的空间  
+如果没有则需要手动进入面板后台进行添加，系统-挂载点挂载对应的UUID
